--- a/catalog.html
+++ b/catalog.html
@@ -11,21 +11,22 @@
     <header class="page-header">
       <nav class="navigation">
         <div class="navigation-wrapper">
-          <a class="gllacy-link" href="index.html">
+          <a class="gllacy-link">
             <img src="/images/logo.svg" alt="Логотип Глэйси." width="137" height="56">
           </a>
-          <ul class="navigation-list">
-            <li class="navigation-list-item">
-              <a class="navigation-link" href="catalog.html">Каталог</a>
-            </li>
-            <li class="navigation-list-item">
-              <a class="navigation-link" href="#">Доставка и оплата</a>
-            </li>
-            <li class="navigation-list-item">
-              <a class="navigation-link" href="#">О компании</a>
-            </li>
-          </ul>
-
+          <div class="navigation-left">
+            <ul class="navigation-list">
+              <li class="navigation-list-item">
+                <a class="navigation-link" href="catalog.html">Каталог</a>
+              </li>
+              <li class="navigation-list-item">
+                <a class="navigation-link" href="#">Доставка и оплата</a>
+              </li>
+              <li class="navigation-list-item">
+                <a class="navigation-link" href="#">О компании</a>
+              </li>
+            </ul>
+          </div>
           <div class="user-menu">
             <a class="contacts-phone" href="tel:+78005558628">+7 (800) 555-86-28</a>
             <form class="search-form" action="https://echo.htmlacademy.ru/" method="get">
@@ -168,7 +169,7 @@
         <ul class="product-list">
           <li class="product-list-item">
             <a class="product-link" href="#">
-              <img class="product-image" src="/images/catalog/malinka.jpg" width="168" height="168"
+              <img class="product-image" src="/images/catalog/malinka.png" width="168" height="168"
                 alt="ярко-красный шарик мороженого.">
               <p class="product-name">Малинка</p>
               <span class="product-text">Сливочное мороженое с малиновым джемом</span>
@@ -180,7 +181,7 @@
           </li>
           <li class="product-list-item">
             <a class="product-link" href="#">
-              <img class="product-image" src="/images/catalog/pistachio.jpg" width="168" height="168"
+              <img class="product-image" src="/images/catalog/phistachio.png" width="168" height="168"
                 alt="фисташковое мороженое с шоколадной крошкой.">
               <p class="product-name">Фисташка</p>
               <span class="product-text">Фисташковый пломбир с кусочками шоколада</span>
@@ -192,7 +193,7 @@
           </li>
           <li class="product-list-item">
             <a class="product-link" href="#">
-              <img class="product-image" src="/images/catalog/chernika.jpg" width="168" height="168"
+              <img class="product-image" src="/images/catalog/chernika.png" width="168" height="168"
                 alt="шарик крем-брюле с прослойкой черничного джема.">
               <p class="product-name">Черника</p>
               <span class="product-text">Крем-брюле с черничным джемом</span>
@@ -204,7 +205,7 @@
           </li>
           <li class="product-list-item">
             <a class="product-link" href="#">
-              <img class="product-image" src="/images/catalog/bubble-gum.jpg" width="168" height="168"
+              <img class="product-image" src="/images/catalog/bubble-gum.png" width="168" height="168"
                 alt="Шарик мороженого голубого цвета с разноцветной крошкой.">
               <p class="product-name">Бабл-гам</p>
               <span class="product-text">Ванильный пломбир со сладкой посыпкой</span>
@@ -216,7 +217,7 @@
           </li>
           <li class="product-list-item">
             <a class="product-link" href="#">
-              <img class="product-image" src="/images/catalog/ejevika.jpg" width="168" height="168"
+              <img class="product-image" src="/images/catalog/ezhevika.png" width="168" height="168"
                 alt="нежный пломбир с ежевикой.">
               <p class="product-name">Ежевика</p>
               <span class="product-text">Сливочное мороженое с ежевичным джемом</span>
@@ -228,7 +229,7 @@
           </li>
           <li class="product-list-item">
             <a class="product-link" href="#">
-              <img class="product-image" src="/images/catalog/banana.jpg" width="168" height="168"
+              <img class="product-image" src="/images/catalog/banana.png" width="168" height="168"
                 alt="легкое мороженое с бананом.">
               <p class="product-name">Банан</p>
               <span class="product-text">Сливочный пломбир с банановым вкусом</span>
@@ -240,7 +241,7 @@
           </li>
           <li class="product-list-item">
             <a class="product-link" href="#">
-              <img class="product-image" src="/images/catalog/chocolate.jpg" width="168" height="168"
+              <img class="product-image" src="/images/catalog/chocolate.png" width="168" height="168"
                 alt="стандартное шоколадное мороженое.">
               <p class="product-name">Шоколадка</p>
               <span class="product-text">Классический шоколадный пломбир</span>
@@ -252,7 +253,7 @@
           </li>
           <li class="product-list-item">
             <a class="product-link" href="#">
-              <img class="product-image" src="/images/catalog/strawberry.jpg" width="168" height="168"
+              <img class="product-image" src="/images/catalog/strawberry.png" width="168" height="168"
                 alt="пломбир с клубничкой.">
               <p class="product-name">Клубничка</p>
               <span class="product-text">Сливочный пломбир с клубничным вкусом</span>
@@ -264,7 +265,7 @@
           </li>
           <li class="product-list-item">
             <a class="product-link" href="#">
-              <img class="product-image" src="/images/catalog/lemon.jpg" width="168" height="168"
+              <img class="product-image" src="/images/catalog/lemon.png" width="168" height="168"
                 alt="мроженое с терпким лимонным вкусом.">
               <p class="product-name">Лимон</p>
               <span class="product-text">Освежающий лимонный сорбет</span>
@@ -276,7 +277,7 @@
           </li>
           <li class="product-list-item">
             <a class="product-link" href="#">
-              <img class="product-image" src="/images/catalog/mentol.jpg" width="168" height="168"
+              <img class="product-image" src="/images/catalog/menthol.png" width="168" height="168"
                 alt="мороженое с приятным холодком.">
               <p class="product-name">Ментол</p>
               <span class="product-text">Сливочный пломбир с ментоловым сиропом</span>
@@ -288,7 +289,7 @@
           </li>
           <li class="product-list-item">
             <a class="product-link" href="#">
-              <img class="product-image" src="/images/catalog/nut.jpg" width="168" height="168"
+              <img class="product-image" src="/images/catalog/nut.png" width="168" height="168"
                 alt="пломбир в сочетании с фисташкой.">
               <p class="product-name">Орешек</p>
               <span class="product-text">Фисташковый пломбир с шоколадным сиропом</span>
@@ -300,7 +301,7 @@
           </li>
           <li class="product-list-item">
             <a class="product-link" href="#">
-              <img class="product-image" src="/images/catalog/creme.jpg" width="168" height="168"
+              <img class="product-image" src="/images/catalog/creme.png" width="168" height="168"
                 alt="сладкое мороженое без лишнего.">
               <p class="product-name">Крем-брюле</p>
               <span class="product-text">Классическое крем-брюле </span>
@@ -358,10 +359,18 @@
         </li>
       </ul>
       <ul class="footer-about-list">
-        <li class="footer-about-item is-current">Для поставщиков</li>
-        <li class="footer-about-item">Наши документы</li>
-        <li class="footer-about-item">О производстве</li>
-        <li class="footer-about-item">Экологические стандарты</li>
+        <li class="footer-about-item">
+          <a class="footer-about-link is-current">Для поставщиков</a>
+        </li>
+        <li class="footer-about-item">
+          <a class="footer-about-link">Наши документы</a>
+        </li>
+        <li class="footer-about-item">
+          <a class="footer-about-link">О производстве</a>
+        </li>
+        <li class="footer-about-item">
+          <a class="footer-about-link">Экологические стандарты</a>
+        </li>
       </ul>
       <a class="made-by-link" href="https://htmlacademy.ru/ ">
         <img src="/images/made-by.svg" width="193" height="53" alt="логотип академии.">
