--- a/index.html
+++ b/index.html
@@ -114,34 +114,37 @@
       </section>
 
       <section class="bonuses">
-        <h2 class="tittle bonus-tittle">Заказывайте мороженое<br> и получайте подарки!</h2>
         <div class="content-wrapper bonus">
-          <div class="bonus-wrapper bonus-raspberry">
-            <h3 class="gift-tittle raspberry-tittle">Малинка даром!</h3>
-            <p>При покупке 2 кг любого фруктового мороженого добавим в ваш заказ банку малинового варенья бесплатно.</p>
-            <a class="gift-button" href="#">Хочу подарок</a>
-          </div>
-          <div class="bonus-wrapper bonus-marshmellow">
-            <h3 class="gift-tittle raspberry-tittle">Маршмеллоу даром!</h3>
-            <p>При покупке 2 кг пломбира добавим в ваш заказ упаковку нежных зефирок совершенно бесплатно.</p>
-            <a class="gift-button" href="#">Хочу подарок</a>
+          <h2 class="tittle bonus-tittle">Заказывайте мороженое<br> и получайте подарки!</h2>
+          <div class="bonus-gift-wrapper">
+            <div class="bonus-wrapper bonus-raspberry">
+              <h3 class="gift-tittle raspberry-tittle">Малинка даром!</h3>
+              <p>При покупке 2 кг любого фруктового<br> мороженого добавим в ваш заказ банку<br> малинового варенья
+                бесплатно.</p>
+              <a class="gift-button" href="#">Хочу подарок</a>
+            </div>
+            <div class="bonus-wrapper bonus-marshmellow">
+              <h3 class="gift-tittle raspberry-tittle">Маршмеллоу даром!</h3>
+              <p>При покупке 2 кг пломбира добавим<br> в ваш заказ упаковку нежных<br> зефирок совершенно бесплатно.</p>
+              <a class="gift-button" href="#">Хочу подарок</a>
+            </div>
           </div>
         </div>
       </section>
 
       <section class="most-popular">
         <div class="content-wrapper most-popular-wrapper">
-          <h2 class="tittle most-popular-tittle">Попробуйте самые популярные вкусы нашего мороженого</h2>
+          <h2 class="tittle most-popular-tittle">Попробуйте самые популярные<br> вкусы нашего мороженого</h2>
           <ul class="popular-list">
             <li class="popular-list-item">
-              <img src="/images/catalog/malinka.jpg" alt="ярко-красный шарик мороженого." width="168" height="168">
+              <img src="/images/catalog/malinka.png" alt="ярко-красный шарик мороженого." width="168" height="168">
               <h3 class="icecream-name">Малинка</h3>
               <p class="icecream-text">Сливочное мороженое с малиновым джемом</p>
               <span class="popular-price">310 ₽/кг</span>
               <button class="add-to-cart" type="button"></button>
             </li>
             <li class="popular-list-item">
-              <img src="/images/catalog/pistachio.jpg" alt="фисташковое мороженое с шоколадной крошкой." width="168"
+              <img src="/images/catalog/phistachio.png" alt="фисташковое мороженое с шоколадной крошкой." width="168"
                 height="168">
               <h3 class="icecream-name">Фисташка</h3>
               <p class="icecream-text">Фисташковый пломбир с кусочками шоколада</p>
@@ -149,7 +152,7 @@
               <button class="add-to-cart" type="button"></button>
             </li>
             <li class="popular-list-item">
-              <img src="/images/catalog/creme.jpg" alt="Шарик Крем-брюле с прослойкой черничного джема." width="168"
+              <img src="/images/catalog/creme.png" alt="Шарик Крем-брюле с прослойкой черничного джема." width="168"
                 height="168">
               <h3 class="icecream-name">Черника</h3>
               <p class="icecream-text">Крем-брюле с черничным джемом </p>
@@ -157,7 +160,7 @@
               <button class="add-to-cart" type="button"></button>
             </li>
             <li class="popular-list-item">
-              <img src="/images/catalog/bubble-gum.jpg" alt="Шарик мороженого голубого цвета с разноцветной крошкой."
+              <img src="/images/catalog/bubble-gum.png" alt="Шарик мороженого голубого цвета с разноцветной крошкой."
                 width="168" height="168">
               <h3 class="icecream-name">Бабл-гам</h3>
               <p class="icecream-text">Ванильный пломбир со сладкой посыпкой</p>
@@ -169,75 +172,88 @@
       </section>
 
       <section class="advantages">
-        <h2 class="tittle advantages-tittle">Магазин Глейси – это онлайн и офлайн-магазин по продаже мороженого
-          собственного
-          производства на развес</h2>
-        <ul class="advantages-list">
-          <li class="agvantages-item advantages-technology">
-            <p>Всё наше мороженое изготавливается на собственном производстве с использованием современного
-              оборудования и проверенных временем технологий.</p>
-          </li>
-          <li class="agvantages-item advantages-farm">
-            <p>Закупка ингредиентов производится только
-              у проверенных фермерских хозяйств, с которыми
-              нас связывает долговременное сотрудничество.</p>
-          </li>
-          <li class="agvantages-item advantages-ingredients">
-            <p>Для приготовления мороженого используются сливки и молоко высочайшего качества. Все ингредиенты
-              и добавки произведены из натурального сырья.</p>
-          </li>
-          <li class="agvantages-item advantages-termopack">
-            <p>Для приготовления мороженого используются сливки и молоко высочайшего качества. Все ингредиенты
-              и добавки произведены из натурального сырья.</p>
-          </li>
-        </ul>
+        <div class="content-wrapper advantages-wrapper">
+          <div class="advantages-text">
+            <h2 class="tittle advantages-tittle">Магазин Глейси – это онлайн и офлайн-магазин по продаже мороженого
+              собственного
+              производства на развес</h2>
+            <ul class="advantages-list">
+              <li class="agvantages-item advantages-technology">
+                <p>Всё наше мороженое изготавливается на собственном<br> производстве с использованием современного<br>
+                  оборудования и проверенных временем технологий.</p>
+              </li>
+              <li class="agvantages-item advantages-farm">
+                <p>Закупка ингредиентов производится только<br>
+                  у проверенных фермерских хозяйств, с которыми<br>
+                  нас связывает долговременное сотрудничество.</p>
+              </li>
+              <li class="agvantages-item advantages-ingredients">
+                <p>Для приготовления мороженого используются сливки<br> и молоко высочайшего качества. Все
+                  ингредиенты<br>
+                  и добавки произведены из натурального сырья.</p>
+              </li>
+              <li class="agvantages-item advantages-termopack">
+                <p>Доставка нашего мороженого осуществляется в<br> специальном термопаке, который не даёт мороженому<br>
+                  растаять и позволяет сохранить превосходный вкус.</p>
+              </li>
+            </ul>
+          </div>
+        </div>
       </section>
       <div class="info">
-        <div class="blog">
-          <p class="blog-tittle">Новое в нашем блоге</p>
-          <p class="blog-text">10 способов сервировки фруктовых щербетов к столу</p>
-        </div>
-        <div class="subscribe">
-          <p class="subscribe-text">Подпишитесь на нашу сладкую рассылку и будьте всегда
-            в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды.
-            Честно =)</p>
-          <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
-            <label class="visually-hidden" for="newsletter-email">Email</label>
-            <input class="field" type="email" placeholder="email@example.com" name="newsletter-email"
-              id="newsletter-email" required>
-            <button class="red-button button button-newsletter" type="submit">Отправить</button>
-          </form>
+        <div class="content-wrapper news-wrapper">
+          <div class="news blog">
+            <p class="blog-tittle">Новое в нашем блоге</p>
+            <p class="blog-text">10 способов сервировки<br> фруктовых щербетов<br> к столу</p>
+          </div>
+          <div class="news subscribe">
+            <p class="subscribe-text">Подпишитесь на нашу сладкую рассылку и будьте всегда<br>
+              в курсе всего самого вкусного, что у нас происходит. Обещаем<br> не спамить и не слать всякой ненужной
+              ерунды.
+              Честно =)</p>
+            <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
+              <label class="visually-hidden" for="newsletter-email">Email</label>
+              <input class="field" type="email" placeholder="email@example.com" name="newsletter-email"
+                id="newsletter-email" required>
+              <button class="red-button button button-newsletter" type="submit">Отправить</button>
+            </form>
+          </div>
         </div>
       </div>
       <section class="delivery">
-        <div class="delivery-content">
-          <h2 class="tittle delivery-tittle">Доставка любимого мороженого на дом</h2>
-          <p class="delivery-text">Хочется полакомиться любимым десертом, но нет времени съездить в магазин? Закажите
-            доставку мороженого на
-            дом, и курьер привезёт вам ваш заказ в течение часа!</p>
+        <div class="content-wrapper delivery-wrapper">
+          <div class="delivery-content">
+            <h2 class="tittle delivery-tittle">Доставка любимого мороженого на дом</h2>
+            <p class="delivery-text">Хочется полакомиться любимым десертом, но нет времени съездить в магазин? Закажите
+              доставку мороженого на
+              дом, и курьер привезёт вам ваш заказ в течение часа!</p>
+          </div>
+          <form class="delivery-form" action="https://echo.htmlacademy.ru/" method="post">
+            <span class="delivery-form-text">Укажите адрес и дату доставки, и мы свяжемся с вами, чтобы подтвердить
+              заказ.</span>
+            <label for="date" class="delivery-label">Дата</label>
+            <input class="delivery-input" id="date">
+            <label for="tel" class="delivery-label">Телефон</label>
+            <input class="delivery-input" id="tel">
+            <label for="address" class="delivery-label">Адрес</label>
+            <input class="delivery-input" id="address">
+            <button class="red-button delivery-form-button" type="submit">Отправить</button>
+          </form>
         </div>
-        <form class="delivery-form" action="https://echo.htmlacademy.ru/" method="post">
-          <span class="delivery-form-text">Укажите адрес и дату доставки, и мы свяжемся с вами, чтобы подтвердить
-            заказ.</span>
-          <label for="date" class="delivery-label">Дата</label>
-          <input class="delivery-input" id="date">
-          <label for="tel" class="delivery-label">Телефон</label>
-          <input class="delivery-input" id="tel">
-          <label for="address" class="delivery-label">Адрес</label>
-          <input class="delivery-input" id="address">
-          <button class="red-button delivery-form-button" type="submit">Отправить</button>
-        </form>
       </section>
       <section class="feedback">
-        <h2 class="visually-hidden">Обратная связь.</h2>
-        <div class="feedback-wrapper">
-          <address class="contacts-address">
-            <span class="feedback-tittle">Адрес главного офиса и офлайн-магазина:</span>
-            <p class="feedback-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
-            <p class="feedback-phone" href="tel:+78128121212">+7 (812) 812-12-12</p>
-            <span>(с 10 до 20 ежедневно)</span>
-          </address>
-          <a class="red-button feedback-link" href="#">Форма обратной связи</a>
+        <div class="content-wrapper feedback-wrapper">
+          <h2 class="visually-hidden">Обратная связь.</h2>
+          <div class="contacts-wrapper">
+            <address class="contacts-address">
+              <span class="feedback-tittle">Адрес главного офиса<br> и офлайн-магазина:</span>
+              <p class="feedback-text">наб. реки Карповки,<br> 5 лит П, Санкт-Петербург</p>
+              <span class="phone-text">Для заказов по телефону:</span>
+              <p class="feedback-phone" href="tel:+78128121212">+7 (812) 812-12-12</p>
+              <span class="shedule-text">(с 10 до 20 ежедневно)</span>
+            </address>
+            <a class="red-button feedback-link" href="#">Форма обратной связи</a>
+          </div>
         </div>
       </section>
     </main>
